--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -118,13 +118,14 @@ b.max-bold{ font-weight: 700; }
 --------------------------------- */
 
 .intro-section{ padding: 50px 0; position: relative; background-size: cover; 
-	z-index: 1;background-image: url(../../images/slider-3-1920x1080.jpg); }
+	z-index: 1;background-image: url(../images/slider-3-1920x1080.jpg); }
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0; 
 	right: 0; background: rgba(0,0,0, .2); }
 
 	
-/* HEADER */
+/* HEADER */
+
 .intro-section .heading-wrapper{ border-radius: 5px; padding: 30px 40px 20px; margin-bottom: 50px;
 	background: #FFAD01; color: #fff; }
 
@@ -242,7 +243,7 @@ b.max-bold{ font-weight: 700; }
 --------------------------------- */
 
 .quoto-section{ padding: 80px 0; position: relative; background-size: cover; 
-	z-index: 1; background-image: url(../../images/slider-4-1920x600.jpg); color: #fff; }
+	z-index: 1; background-image: url(../images/slider-4-1920x600.jpg); color: #fff; }
 
 .quoto-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0; 
 	right: 0; background: rgba(0,0,0, .8); }
@@ -273,7 +274,7 @@ b.max-bold{ font-weight: 700; }
 /* REDIAL PROGRESS SECTION */
 
 .radial-progress-section{ border: 0; position: relative; background-size: cover; 
-	z-index: 1; background-image: url(../../images/slider-4-1920x600.jpg); color: #fff; }
+	z-index: 1; background-image: url(../images/slider-4-1920x600.jpg); color: #fff; }
 
 .radial-progress-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; 
 	left: 0; right: 0; background: rgba(0,0,0, .8); }
